Franco-Russian War work

--- a/localisation/english/PB_France_l_english.yml
+++ b/localisation/english/PB_France_l_english.yml
@@ -1038,6 +1038,66 @@
   French_postwar.13.a:0 "Give them what they want"
   French_postwar.13.b:0 "They have gone too far!"
 
+  Prague_Conference.1.t:0 "The Prague Conference"
+  Prague_Conference.1.d:0 "Today delegations from across Europe gathered in Prague to discuss the future of the Pacte Revanchiste as well as the transfer of territorial holdings currently under French administration. Russian ambassadors made it abundantly clear prior to the conference attendees that it did not intend to grant the same generosity as it did to its allies of the First Great War, suffering a humiliating victory at the treaty of Tours Russia had entered the negotiations in Prague with a fierce spirit of tempered vengeance.\n\nFrance had also done so likewise however Russia’s feeling of bitterness over Great Britian had quickly subsided after the fall of Germany, seeing an invasion of Britain as unlikely, if not entirely impossible. In secret certain French military officials also echoed the same beliefs however France’s resolve to see the French flag fly over London remained an irrefutable truth, regardless of the fact that Paris would likely never land a military force onto mainland Britain."
+  Prague_Conference.1.a:0 "Let the talks begin"
+
+  Prague_Conference.2.t:0 "Conference of Prague - Scandinavia"
+  Prague_Conference.2.d:0 "The first topic to be brought up by the Russian delegation was in relation to the future of Scandinavia, whilst Russia had no concrete ambitions for the future of the region they had defended their historical claims of Finnish lands and requested that France sign a pact of non-interest regarding the region."
+  Prague_Conference.2.a:0 "Promise the Russians Finland." # For France
+  Prague_Conference.2.b:0 "Leave our position on Scandinavia vague." # For France
+  Prague_Conference.2.c:0 "So what will it be Paris?" # For Russia
+
+  Prague_Conference.3.t:0 "Conference of Prague - Finland Under Russia"
+  Prague_Conference.3.d:0 "The French delegation heeded our demands for a non-interest treaty relating to the future of Finland, this can only be welcomed as a positive result and a step towards a united Pacte."
+  Prague_Conference.3.a:0 "They made the right decision." # For Russia
+
+  Prague_Conference.4.t:0 "Conference of Prague - Finland Under France"
+  Prague_Conference.4.d:0 "The French delegation refused to sign a non-interest treaty relating to the future of Finland, this can only be seen as a hostile play against the Russian nation."
+  Prague_Conference.4.a:0 "French Scum." # For Russia
+
+  Prague_Conference.5.t:0 "Conference of Prague - Balkans"
+  Prague_Conference.5.d:0 "The second point of discussion was to do with the Balkans, more specifically what France’s plans were for the region, and whether they intended to respect Russia’s historical role within the region. Already rumors were spreading that France had intended to shakeup the region and bring stability to what some were starting to call a ‘slavic mess’ of countries. "
+  Prague_Conference.5.a:0 "The Balkans would be safer under French guidance." # For France
+  Prague_Conference.5.b:0 "We have no interest in that mess of a region." # For France
+  Prague_Conference.5.c:0 "So what will it be Paris?" # For Russia
+
+  Prague_Conference.6.t:0 "Conference of Prague - Balkans Under France"
+  Prague_Conference.6.d:0 "The French delegation refused to accept our nations historical role in Balkan affairs, it seems France has its own ambitions within the region, we cannot allow this perverted behaviour continue."
+  Prague_Conference.6.a:0 "French Scum." # For Russia
+
+  Prague_Conference.7.t:0 "Conference of Prague - Balkans Under Russia"
+  Prague_Conference.7.d:0 "The French delegation has decided to accept our nations historical role in Balkan affairs, as of now the Pacte remains stable."
+  Prague_Conference.7.a:0 "They made the right decision." # For Russia
+
+  Prague_Conference.8.t:0 "Conference of Prague - Germany"
+  Prague_Conference.8.d:0 "The third point of discussion was about the future of Germany. French delegates had made clear their position on Russia’s occupied region of eastern Germany, officially known as the Berlin Administration. Paris views the occupation as a betrayal of the alliance and believes that Berlin rightfully belongs to their current puppet across the Rhine. Russia however refused to budge on the topic and demanded an official recognition of the client state. The climate has noticeably increased in tension and a solution must be found soon."
+  Prague_Conference.8.a:0 "Berlin is rightfully ours!" # For France
+  Prague_Conference.8.b:0 "Recognize the Berlin Administration." # For France
+  Prague_Conference.8.c:0 "So what will it be Paris?" # For Russia
+
+  Prague_Conference.9.t:0 "Conference of Prague - Berlin Disputed"
+  Prague_Conference.9.d:0 "The French delegation has decided to go ahead and push their claim on berlin, such a rash decision can only mean that they are planning for a possible conflict with us."
+  Prague_Conference.9.a:0 "French Scum" # For Russia
+
+  Prague_Conference.10.t:0 "Conference of Prague - Berlin Recognized"
+  Prague_Conference.10.d:0 "The French delegation has cave in to our demands and has officially Recognized the Berlin Administration."
+  Prague_Conference.10.a:0 "They made the right decision." # For Russia
+
+  Prague_Conference.11.t:0 "Conference of Prague - Czechia"
+  Prague_Conference.11.d:0 "The third point of discussion was about the future of Germany. French delegates had made clear their position on Russia’s occupied region of eastern Germany, formally known as the Berlin Administration. Paris views the occupation as a betrayal of the alliance and believes that Berlin rightfully belongs to their current puppet across the Rhine. Russia however refused to budge on the topic and demanded an official recognition of the client state. The climate has noticeably increased in tension and a solution must be found soon."
+  Prague_Conference.11.a:0 "Czechia belongs to France!" # For France
+  Prague_Conference.11.b:0 "We have no need for the slavic kind." # For France
+  Prague_Conference.11.c:0 "So what will it be Paris?" # For Russia
+
+  Prague_Conference.12.t:0 "Conference of Prague - Czechia Under France"
+  Prague_Conference.12.d:0 "The French delegation has decided that France will maintain its military occupation of Czechia indefinitely, such an occupation of our slavic brothers cannot go unanswered."
+  Prague_Conference.12.a:0 "French Scum." # For Russia
+
+  Prague_Conference.13.t:0 "Conference of Prague - Czechia Under Russia"
+  Prague_Conference.13.d:0 "The French delegation has decided that France will withdraw its military forces in Czechia and grant us unconditional control of the country."
+  Prague_Conference.13.a:0 "They made the right decision." # For Russia
+
 
   ##########################
   # IDEAS
@@ -1468,6 +1528,8 @@
   PB_FRA_Pan_Francophone_Doctrine_desc:0 "We shall make an effort to rekindle relations with any historically French colonies. These people once belonged to our empire and are as French as any man from Paris to Marseille."
   PB_FRA_Renewed_Spirit_Focus:0 "Renewed National Spirit"
   PB_FRA_Renewed_Spirit_Focus_desc:0 "With our victory over Europe now realized our openly hostile stance towards to the Anglo-German world can ease. Our goal of a French dominated Europe has been acheived and so now the time for reconstruction and celebration has begun."
+  PB_FRA_Behead_The_Bear:0 "The Prague Conference"
+  PB_FRA_Behead_The_Bear_desc:0 "With the defeat of the Germans and the alienation of Imperial Britain from their major continental European ally the time has come to decide the future of Europe’s with our ally to the east. Despite the possibility of extending our alliance with Russia indefinitely the reality of the situation demands that we extensively discuss the details of Europe's future territorial borders else we face another destabilizing European war. The Russians have made clear that they intend to play hard when it comes to concessions if we wish to keep this alliance from fracturing, however already voices in the streets of Paris have made clear that negotiation with the Russians is a reality they are not willing to accept.\n\nThe future of France, Russia, and Europe will be decided in Prague, either by penstroke, or by sword."
   PB_FRA_Develop_Collaborators:0 "Develop the Collaborator States"
   PB_FRA_Develop_Collaborators_desc:0 "With regions in Europe under our jurisdiction we have the responsibility to build up the economies of these states. Whilst we wish we didn't have to bear such a fact unfortunately with the conquest of new lands comes the cost of maintaining these regions. "
   PB_FRA_Develop_Collaborators_Military:0 "Develop the National Armies"
@@ -2055,6 +2117,12 @@
   FRA_SP_governed_state_angry:0 "Upset SP Governor"
   FRA_militarist_governed_state:0 "Militarist Governed State"
   FRA_militarist_governed_state_angry:0 "Upset Militarist Governor"
+
+  PB_FRA_Behead_The_Bear_tt:0 "The Prague Conference will decide the future of the §HPacte Revanchiste§! (§ga series of events relating to the Prague Conference will fire§!):\n\n £GFX_pol_violence §YFranco-Russian War§! - Should two or more of Russia's territorial demands be rejected then war between our two spheres will break out.\n\n £GFX_power_balance_texticon §YFranco-Russian Split§! - Should one of Russia's territorial demands be rejected Russia will leave the Pacte and form their own alliance.\n\n £GFX_national_unity_texticon §YFranco-Russian Alliance§! - Should all four of Russia's territorial demands be accepted Russia and its subjects will remain in the Pacte.\n\nCurrently you have accepted §Y[?PB_PC_Outcome]§!/§Y4§! of Russia's demands."
+  FRA_Prague_Conference_tt_event:0 "The Prague Conference will begin"
+  FRA_Prague_Conference_happy_Russia_tt:0 "This will £GFX_national_unity_texticon §GPlease§! Russia."
+  FRA_Prague_Conference_angry_Russia_tt:0 "This will £GFX_pol_violence §RAnger§! Russia."
+
   ##########################
   # FRENCH COLLABORATION IN SWITZERLAND 
   ##########################
