--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -1117,6 +1117,18 @@
   PBNews.281.d:0 "Ma Zhongying, the once feared warlord of West China, is dead.\n\nAfter launching an invasion of the now Russian-occupied Xinjiang, Zhongying's forces were pushed back and ultimately crushed. Zhongying himself died in a firefight with Russian agents, who paraded his body around the former capital for photographers.\n\nNow occupying much of Western China, the Russian occupation declared the United Western Provinces, a reconstruction authority to govern the war-torn remnants of Zhongying's failed empire."
   PBNews.281.a:0 "Not a huge loss."
 
+  PBNews.282.t:0 "FRANCO-RUSSIAN WAR"
+  PBNews.282.d:0 "Today the unthinkable has happened. Across the Franco-Russian border reports of widescale offensives have become commonplace amongst an already turbulent European military theatre. With the fall of Germany it seems the once unified Pacte Revanchiste has regressed into infighting with Russia officially forming its own counter-balance to the faction, known simply as the Petrograd Pact. Already it seems Britain and her empire are readying themselves for what has proven to be a once in a lifetime opportunity to restore stability and order to the European continent against a weak and divided foe. "
+  PBNews.282.a:0 "The future of Europe is at stake."
+
+  PBNews.283.t:0 "FRANCO-RUSSIAN SPLIT"
+  PBNews.283.d:0 "The alliance that was meant to see the destruction of both Germany and Britain has decidedly fallen apart after Russian delegates to the Prague Conference declared that France no longer had Russia’s interests in mind. The Pacte Revanchiste has just fallen short of outright military infighting but tensions between the Pacte and the newly founded Petrograd Pact are concerningly high. While Russia has decided to continue its war against London and her empire the bears willingness to fight an enemy an ocean away has been put into question by some military analysts. The question now remains as to whether France can continue her fight in a now greatly weakened state."
+  PBNews.283.a:0 "Europe remains divided."
+
+  PBNews.284.t:0 "FRANCO-RUSSIAN ALLIANCE"
+  PBNews.284.d:0 "What was once know as the pact of thorns has now culminated into an official treaty of friendship between both Russia and France thanks to the successful negotiations of the Prague Conference. The alliance which had seen its fair share of disagreements had, to the surprise of many, remained unified against their Anglo rival. The Pacte Revanchiste now follows a steady course of conquest against Britain and any hopes of a collapsed and divided Pacte have been lost. London’s immortal empire will now have to face the combined might of both France and Russia."
+  PBNews.284.a:0 "The Pacte remans united."
+
 
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
