Franco-Russian War / Russian victory

--- a/localisation/english/PB_countries_cosmetic_l_english.yml
+++ b/localisation/english/PB_countries_cosmetic_l_english.yml
@@ -4561,3 +4561,51 @@ ETR_Insurgency_an_ADJ:0 "Ugyhur"
   XSM_WESTCHINA_ds_ADJ:0 "Yettishar"
   XSM_WESTCHINA_cn_ADJ:0 "Yettishar"
   XSM_WESTCHINA_an_ADJ:0 "Yettishar"
+
+  DDR_RUS_Theocracy:0 "Divine State of Germany"
+  DDR_RUS_Theocracy_DEF:0 "the Divine State of Germany"
+  DDR_RUS_Theocracy_ADJ:0 "German"
+
+  DDR_RUS_Occupied:0 "Köln Administration"
+  DDR_RUS_Occupied_DEF:0 "the Köln Administration"
+  DDR_RUS_Occupied_ADJ:0 "German"
+
+  OBR_RUS_Theocracy:0 "Holy Greater Brittanian Empire"
+  OBR_RUS_Theocracy_DEF:0 "the Holy Greater Brittanian Empire"
+  OBR_RUS_Theocracy_ADJ:0 "British"
+
+  OBR_RUS_Occupied:0 "Russian Occupied Britian"
+  OBR_RUS_Occupied_DEF:0 "Russian Occupied Britian"
+  OBR_RUS_Occupied_ADJ:0 "British"
+
+  OFA_RUS_Theocracy:0 "French Empire of Faith"
+  OFA_RUS_Theocracy_DEF:0 "the French Empire of Faith"
+  OFA_RUS_Theocracy_ADJ:0 "French"
+
+  OFA_RUS_Occupied:0 "Russian Occupied France"
+  OFA_RUS_Occupied_DEF:0 "Russian Occupied France"
+  OFA_RUS_Occupied_ADJ:0 "French"
+
+  SPR_RUS_Theocracy:0 "Orthodox Empire of Iberia"
+  SPR_RUS_Theocracy_DEF:0 "the Orthodox Empire of Iberia"
+  SPR_RUS_Theocracy_ADJ:0 "Spanish"
+
+  SPR_RUS_Occupied:0 "Russian Occupied Spain"
+  SPR_RUS_Occupied_DEF:0 "Russian Occupied Spain"
+  SPR_RUS_Occupied_ADJ:0 "Spanish"
+
+  ITA_RUS_Theocracy:0 "Celestial Latin Federation"
+  ITA_RUS_Theocracy_DEF:0 "the Celestial Latin Federation"
+  ITA_RUS_Theocracy_ADJ:0 "Italian"
+
+  ITA_RUS_Occupied:0 "Russian Occupied Italy"
+  ITA_RUS_Occupied_DEF:0 "Russian Occupied Italy"
+  ITA_RUS_Occupied_ADJ:0 "Italian"
+
+  WLA_RUS_Theocracy:0 "Cosmic Realm of Dietsland"
+  WLA_RUS_Theocracy_DEF:0 "the Cosmic Realm of Dietsland"
+  WLA_RUS_Theocracy_ADJ:0 "Dutch"
+
+  WLA_RUS_Occupied:0 "Russian Occupied Dietsland"
+  WLA_RUS_Occupied_DEF:0 "Russian Occupied Dietsland"
+  WLA_RUS_Occupied_ADJ:0 "Dutch"
