--- a/localisation/english/PB_autonomy_l_english.yml
+++ b/localisation/english/PB_autonomy_l_english.yml
@@ -35,5 +35,7 @@
 
  autonomy_PB_Dependent_Kingdom:0 "Dependent Kingdom"
 
+ autonomy_PB_Russian_Theocracy:0 "Russian Theocratic Dependency"
+
  PB_can_raise_autonomy_level:0 "Can Raise Autonomy Level"
  PB_can_lose_autonomy_level:0 "Can Lower Autonomy Level"
