--- a/localisation/english/PB_factions_l_english.yml
+++ b/localisation/english/PB_factions_l_english.yml
@@ -56,5 +56,5 @@
   FACTION_CIS:0 "§YMember of the Coalition Of Independent States§!"
   FACTION_CIS_LONG:0 "This nation is a member of the §YCoalition Of Independent States§!, a military alliance formed by America with the goal of protecting stability and democracy across the globe, although it specifically in recent times has targeted the commonwealths and dominions of the British Empire . Essentially a front to counter British Expansionism, where minor nations can receive protection and support from Philadelphia."
 
-  FACTION_PP:0 "§YMember of the Petrograd Pact§!" 
-  FACTION_PP_LONG:0 "This nation is a member of the §YPetrograd Pact§!, a military alliance formed by Russia as a counter-balance to French expansionism. A direct result of the Prague Conference, Russia, her subjects, and those aligned within her sphere have instead opted to leave the Pacte Revanchiste and pursue their own affairs.  "
+  FACTION_PP:0 "§YMember of the Tsargrad Pact§!" 
+  FACTION_PP_LONG:0 "This nation is a member of the §YTsargrad Pact§!, a military alliance formed by Russia as a counter-balance to French expansionism. A direct result of the Prague Conference, Russia, her subjects, and those aligned within her sphere have instead opted to leave the Pacte Revanchiste and pursue their own affairs.  "
