--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -159,7 +159,7 @@
  STATE_158:0 "Piedmont"
  STATE_159:0 "Lombardy"
  STATE_160:0 "Veneto"
- STATE_161:0 "Emilia Romagna"
+ STATE_161:0 "Romagna"
  STATE_162:0 "Tuscany"
  STATE_163:0 "Kosovo"
  STATE_164:0 "Dodecanese"
