Russia focus work + Poland stuff

--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -1133,6 +1133,22 @@
   PBNews.285.d:0 "Against all odds the Russian army has managed to force the remaining forces of the Pacte Revanchiste to sign an unconditional treaty of surrender. Already parades are being held in the war-torn city of Paris as jubilation across Petersburg reach an all-time high.\n\nWith France defeated and continental Europe under complete Russian oversight it seems Russia’s rise to global superpower status has been all but assured. The world now waits with bated breath to see what Russia has in store for its newly conquered regions. "
   PBNews.285.a:0 "The East becomes the West."
 
+  PBNews.286.t:0 "KRAKOW UNDER MARTIAL LAW"
+  PBNews.286.d:0 "In light of recent events in Russia, the future of the Occupation government in Galicia was uncertain. Early this morning, Saint Petersburg cleared that uncertainty as Russian troops stormed the Galician capital of Krakow. In an impromptu press conference, Okhrana officials revealed documents implicating the Galician government of assisting Polish secessionists.\n\nWith Galicia dissolved, Polish officials have revived plans to return the territory to the Polish autonomy, although it is unknown how Russia will respond."
+  PBNews.286.a:0 "Is Russian rule under threat?"
+
+  PBNews.287.t:0 "KRAKOW IN FLAMES"
+  PBNews.287.d:0 "In a surprising turn of events, Galician kinegram screens lit up to reveal leaked plans by the Russian government to invade and abolish the occupation government. With Russian troops caught on the backfoot, the local population has rallied to sabotage infrastructure and resist the incursion as best they can.\n\nIt remains unknown how the documents were leaked, but for now Russia's greater concern is the fresh rebellion now fermenting within their Western borderlands. "
+  PBNews.287.a:0 "Is Russian rule under threat?"
+
+  PBNews.288.t:0 "KRAKOW AWARD"
+  PBNews.288.d:0 "Following the dissolution of the Galician Occupation government, Russia has chosen to approach the Polish autonomy and offer them territorial concessions. Under what is being called the Krakow Award, the Polish Autonomy has been granted control of the city of Krakow and surrounding territory.\n\nThe Award has been met with muted, but still noteworthy support from the Polish population. Though perhaps not the Greater Poland they dreamed of, for now the Award is a stepping stone to greater Russo-Polish cooperation."
+  PBNews.288.a:0 "Not quite Greater Poland, but close enough for now."
+
+  PBNews.289.t:0 "POLISH-GALICIAN REUNIFICATION"
+  PBNews.289.d:0 "Following the dissolution of the Galician Occupation government, Russia has chosen to approach the Polish autonomy and offer them territorial concessions. Under what is being called the Krakow Award, the Polish Autonomy has been granted control of the former territories of Galicia.\n\nShocked crowds celebrate across Poland and Galicia, as Poland regains territories once thought permanently lost after the failure of the First National Awakening."
+  PBNews.289.a:0 "Greater Poland, within the Empire?"
+
 
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
