--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -1119,6 +1119,7 @@ PB_AME_Protector_Caribean:0 "Protector of the Carribean"
 PB_AME_Rebuild_Acadia:0 "Take Care of Acadia"
 PB_AME_Anglois_Crisis:0 "The Anglois Crisis"
 PB_AME_Governor_Edward_Crisis:0 "Edwards Fumble"
+PB_AME_Governor_Edward_Crisis_desc:0 "What Edward has done has shacken our nation to its core. As Governor General he represents the Crown and Empire in America and so his blunder puts all of them in a dark light. The people are angry and demand justice. This will not change for a long time and so we have decide how to act in the upcoming events."
 PB_AME_Governor_A_Course_of_Confrontation:0 "Confrontation"
 PB_AME_Governor_Two_Empires:0 "Partnership"
 PB_AME_Influence_the_Corrupt_Isles:0 "Influences in Isles"
@@ -1507,14 +1508,38 @@ Unicom.47.d:0 "The docks of New York were a buzz with activity. This would be un
 Unicom.47.a:0 "...Right?"
 
 Unicom.48.t:0 "Edwards Fumble"
-Unicom.48.d:0 "Death"
+Unicom.48.d:0 "Edwards career as Governor-General has been full of scandals already. Parties, rumors of relationships, uses of new sociogentic-drugs have all been in on the title pages of the papers already. Nothing of this has really come to threaten Edward however. He continues to live his life as a figurehead for the Empire in America. No one has yet dared to try to remove him as it would be an insult and attack on all of the Empire itself. So when the first news arrived that Edward was involved in a little car accident no one was really suprised. His press-representive first called it 'A Little Fumble'\n\nHowever more and more rumors are coming out of Pittsburgh, where the accident occured, that this might be more then just a little 'fumble'. Reporters detail that Edward was involved in an unofficial car race after one of reguarly large parties. Edward was likely highly intoxicated and on drugs while being the driver of the car. He seems to have lost control of the car during the race and crashed it onto the sidewalk.\n\nBut what is to be revealed is more shocking then anything that has come before. When Edward got on the sidewalk he directly hit a young woman in her late 20s with both of her young children.\n\nAll three are dead.\n\n...\n\nThe nation screams."
 Unicom.48.a:0 "What have you done Edward..."
 
-Unicom.49.t:0 "Edward's Shame"
-Unicom.49.d:0 "Edward has been accused of manslaughter by local authorities How do we respond?"
+Unicom.49.t:0 "Edward in Crisis"
+Unicom.49.d:0 "Edward is being accused of manslaughter by the press and the people. The local authorities of Pittsburgh have already order Edward to appear infront of a court for legal proceedings in this case. This case is burning up all social discourse right now. Anti-British Sentiment is once again getting strong splitting our nation in half. The attacks on Edward himself are in turn an insult to the Royal Family who feel like they have to protect their family and standing in the Empire.\n\nThe Government is split how to react and act in all this currently.\n\nIt would likely be the best for us and the rest of the Confederation if we do not take a stance in this affair. It is a judicial matter and it would be right course to let court make their fair judgement. However Edward's is quite unpopular in the government his excessive partying and ungracious appereance as Governor-General have been an embarresement for us and this might be a chance to get rid of him. On the other hand the value of helping Edward might bring us many benefits with London and ease down tensions with the Royal Family."
 Unicom.49.a:0 "Protect Edward"
 Unicom.49.b:0 "Stay Neutral"
-Unicom.49.c:0 "The Governor General Time has run out"
+Unicom.49.c:0 "Edward is not welcome here anymore"
+
+Unicom.50.t:0 "Edward calls on his Royal Immunity"
+Unicom.50.d:0 "As expected Edward has called on his royal immunity which protects him from any kind of criminal prosecution from the law. With this Edward will be able to walk away from the entire affair with basically no legal consequences.\n\nDespite this being  apretty much expected development it further fuels on the Anti-British Rhetoric that the Royal Family has no connection to the normal people and do not see themself beholden to the law of our countries. The Royal Family has no respect for American Laws.\n\nThe Cabinet has an option to intervene in all of this however. Due to several legal loophools we could be able to remove Edwards Royal Immunity on American Soil and he would be subsuquent forced too appear in court.\nHowever many cabinet members warn that this might be a step too far. We would be directly intervening against Edward. The legal certainty of this move is also highly controversial and could be a political blunder. Furthermore the Royal Family and London likely will intervene regarding such a political move."
+Unicom.50.a:0 "No more Immunity"
+Unicom.50.b:0 "His immunity has to remain"
+
+Unicom.51.t:0 "Philadelphia suspends the Royal Immunity of Edward!"
+Unicom.51.d:0 "The Government in the United Commenwealth has decided to suspend Edwards Royal Immunity.\n\nEdward has been accused of manslaughter because of his recent misfortune in Pittsburgh and ordered to appear in court. Edward called on his Royal Immunity as a member of the Royal Family to avoid any kind of prosecution. Despite his shameful actions he retains this right with his blood.\n\nHowever an unexpected development has occured. The Government in Philadelphia, either seeking political wins for themselves or holding a grudge against the family, have declared that they have the legislative power and will to suspend Edwards immunity on American soil. This move is legally questionable as it build on several legal loopholes.\n\nThe Royal Family is outraged and furious at this. They demand that we intervene in this matter and help restore his Royal Immunity as Leader of the Imperial Confederation.\nThe Government is restrained in its reaction for now however. It is really worth it further straining relations with America over ... Edward?"
+Unicom.51.a:0 "He is on his own..."
+Unicom.51.b:0 "The Royal Family will be protected!"
+
+Unicom.52.t:0 "London orders us to maintain Edwards Immunity"
+Unicom.52.d:0 ""
+Unicom.52.a:0 "For the Sake of Stability..."
+Unicom.52.b:0 "This is our country - Our rules - Our lands!"
+
+Unicom.53.t:0 "Philadelphia ignores our demand regarding Edward"
+Unicom.53.d:0 "Philadelphia has decided that they will simply ignore our demand to repeal the suspension of Royal Immunity of Edward. This has shocked the government as we expected the United Commenwealth to fold on this matter as they have simiarly done in the past with others. But it seems like that they are deadlocked on prosecuting Edward for his crimes and will use all means to get this done.\n\nThe Government has decided that they and Britian will keep out of this affair now. This entire incident has damaged Atlantic Relations something that should be avoided at all costs. The Prime Minister himself is in no mood to furthermore ruin the Imperial Tension for trivial matters surrounding Edward or the Royal Family."
+Unicom.53.a:0 "This was so an unnecessary embarrassment"
+
+Unicom.54.t:0 "The Trial of Edward"
+Unicom.54.d:0 "And so with Edwards Royal Immunity removed his prosecution and trial follow.\n\nThe trial will likely come to a conclusion that Edward is guilty. On the night he was drunk from witness reports and operating as the driver of the car which crashed into the unlucky souls. Though it turns out that he might have been forced into the car race by his rough companionship. The car also had several mechanical malfunction regarding its brakes and the pushing of the other car contestent have likely brought the car onto the sidewalk. Despite all the work by his laywers Edward will be found guilty. Even the dubious surrounding circumstances of the trial, which is described by foreign and independent press as apperaing more of a witch trial will not change that.\n\nThe question now comes how hard the sentence will be?\n\nA more lenient sentencing will entail the court to force Edward to pay a large payment of roughly 4-5 million pounds and being on parole for 15 years.\n\nMany call this punishment not enough arguing that the Royal Family can financially help Edward pay it and then simply move back to America. A harsher sentence would entail a court ruling of Edward being ordered to go to prison for around 8 years. Such a sentence would rattle the entire Confederation even more and many argue to avoid it."
+Unicom.54.a:0 "A lenient sentence is the best"
+Unicom.54.b:0 "Justice must be served"
 
 Unicom_Elections.1.t:0 "The Dust Settles on the Crisis"
 Unicom_Elections.1.d:0 "Many politicians and citizens believe that Coolidge did not do enough to address the concerns of the veterans and that his lack of action led to the violent removal of the veterans from their encampment in Philadelphia. by the military. Some have even called for his resignation over the matter.\n\nCoolidge has defended his actions, stating that he had to uphold the law and maintain order in the city. However, the controversy surrounding his response to the crisis has only grown, and many are calling for further investigation and accountability. The Bonus Army Crisis remains a stain on the Coolidge administration, and protests and unrest continue even after the end of the general crisis itself."
