some stuff here and there for UC

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -693,6 +693,9 @@
  VICTORY_POINTS_4345:0 "Montréal"
  VICTORY_POINTS_4872:0 "Winnipeg"
  VICTORY_POINTS_7361:0 "Halifax"
+ VICTORY_POINTS_4430:0 "Cape Breton"
+ VICTORY_POINTS_12505:0 "St. John's"
+ VICTORY_POINTS_4285:0 "Saint John"
  VICTORY_POINTS_12149:0 "Québec"
  VICTORY_POINTS_7433:0 "Lévis"
  VICTORY_POINTS_10230:0 "Nolain"
