--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -1528,7 +1528,7 @@ Unicom.51.a:0 "He is on his own..."
 Unicom.51.b:0 "The Royal Family will be protected!"
 
 Unicom.52.t:0 "London orders us to maintain Edwards Immunity"
-Unicom.52.d:0 ""
+Unicom.52.d:0 "Britian has issued a warning that we should revert our decision regarding the suspension of Edwards Royal Immunity. London has made it clear that such an act would heavily undermine the Royal Family and thereby damage the foundations of the Empire. They make it clear that if we do not follow their demands, they themselves will follow with legal proceedings in the framework of the Imperial Confederation. Or in other ways.\n\nWhile this news creating a short panic in the Cabinet as no one really believed the British Government themself would interfere in this affair. However it has quickly faded away as we have been revaluating the scale of the message. For many it is nothing more then a huge bluff and that London does not the will to further escalate this scene for Edward and that we should stick to this decision. On the other hand maybe we should think more for the common cause of the Confederation and take the blow?"
 Unicom.52.a:0 "For the Sake of Stability..."
 Unicom.52.b:0 "This is our country - Our rules - Our lands!"
 
@@ -1540,6 +1540,11 @@ Unicom.54.t:0 "The Trial of Edward"
 Unicom.54.d:0 "And so with Edwards Royal Immunity removed his prosecution and trial follow.\n\nThe trial will likely come to a conclusion that Edward is guilty. On the night he was drunk from witness reports and operating as the driver of the car which crashed into the unlucky souls. Though it turns out that he might have been forced into the car race by his rough companionship. The car also had several mechanical malfunction regarding its brakes and the pushing of the other car contestent have likely brought the car onto the sidewalk. Despite all the work by his laywers Edward will be found guilty. Even the dubious surrounding circumstances of the trial, which is described by foreign and independent press as apperaing more of a witch trial will not change that.\n\nThe question now comes how hard the sentence will be?\n\nA more lenient sentencing will entail the court to force Edward to pay a large payment of roughly 4-5 million pounds and being on parole for 15 years.\n\nMany call this punishment not enough arguing that the Royal Family can financially help Edward pay it and then simply move back to America. A harsher sentence would entail a court ruling of Edward being ordered to go to prison for around 8 years. Such a sentence would rattle the entire Confederation even more and many argue to avoid it."
 Unicom.54.a:0 "A lenient sentence is the best"
 Unicom.54.b:0 "Justice must be served"
+
+Unicom.55.t:0 "The New Governor-General"
+Unicom.55.d:0 "."
+Unicom.55.a:0 "Prince George to mend his brothers mistakes"
+Unicom.55.b:0 "Prince Arthur as a Blood-Brother for America"
 
 Unicom_Elections.1.t:0 "The Dust Settles on the Crisis"
 Unicom_Elections.1.d:0 "Many politicians and citizens believe that Coolidge did not do enough to address the concerns of the veterans and that his lack of action led to the violent removal of the veterans from their encampment in Philadelphia. by the military. Some have even called for his resignation over the matter.\n\nCoolidge has defended his actions, stating that he had to uphold the law and maintain order in the city. However, the controversy surrounding his response to the crisis has only grown, and many are calling for further investigation and accountability. The Bonus Army Crisis remains a stain on the Coolidge administration, and protests and unrest continue even after the end of the general crisis itself."
