--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -1546,6 +1546,21 @@ Unicom.55.d:0 "."
 Unicom.55.a:0 "Prince George to mend his brothers mistakes"
 Unicom.55.b:0 "Prince Arthur as a Blood-Brother for America"
 
+Unicom.56.t:0 "The Image of Edward"
+Unicom.56.d:0 "."
+Unicom.56.a:0 "An apology to the American People"
+Unicom.56.b:0 "Demand he will stop with his parties"
+Unicom.56.c:0 "Lets bring this whole ordeal behind us"
+
+Unicom.57.t:0 "Edward Accepts the Demands"
+Unicom.57.d:0 "."
+Unicom.57.a:0 "Stay obscure now"
+
+Unicom.58.t:0 "Edward Rejects the Demands"
+Unicom.58.d:0 "."
+Unicom.58.a:0 "I hate the royals"
+
+
 Unicom_Elections.1.t:0 "The Dust Settles on the Crisis"
 Unicom_Elections.1.d:0 "Many politicians and citizens believe that Coolidge did not do enough to address the concerns of the veterans and that his lack of action led to the violent removal of the veterans from their encampment in Philadelphia. by the military. Some have even called for his resignation over the matter.\n\nCoolidge has defended his actions, stating that he had to uphold the law and maintain order in the city. However, the controversy surrounding his response to the crisis has only grown, and many are calling for further investigation and accountability. The Bonus Army Crisis remains a stain on the Coolidge administration, and protests and unrest continue even after the end of the general crisis itself."
 Unicom_Elections.1.a:0 "We prevented a revolution and THIS is the thanks we get?"
@@ -2142,6 +2157,7 @@ PB_AME_Listen_To_Halsey_tt:0 "§YWilliam Halsey Jr.§! will be unlocked as a Nav
 PB_AME_Crush_Corporate_America_tt:0 "The following megacorps will be §RPermanently§! removed:\n  -§YDolbear-Bell§!\n  -§YFord Motor Company§!\n  -§YUnion Standard Oil Company§!\n\nBecause of the immense size and global importance of the §HEIEC§! they shall remain intact.\n\n"
 PB_AME_Haggle_with_Megacorp_tt:0 "Events will determine the size and extent of the §YNew Corporation Tax§!"
 PB_AME_Ewdward_Crisis_tt:0 "Events will determine the §YFate of Edward§!"
+Edward_Hating_Royals_Impact_tt:0 "£decision_icon_small §YDecision Cost§! of All Aligned Decisions in the Balance of Power will be §Greduced§!"
 edward_fumble_tt:0 "§REdwards Fumble§! has occured"
 PB_AME_Reverse_Native_Policy_tt:0 "§HSeminolia§!: Majority culture is Seminole"
 PB_AME_Address_The_Southern_Issue_tt:0 "Hasn't already resolved the Southern Issue"
