Edwards Fumble Finished

--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -1542,23 +1542,23 @@ Unicom.54.a:0 "A lenient sentence is the best"
 Unicom.54.b:0 "Justice must be served"
 
 Unicom.55.t:0 "The New Governor-General"
-Unicom.55.d:0 "."
+Unicom.55.d:0 "One thing has become clear the United Commonwealth needs a new Governor General.\n\nWhile some wish for a non-royal to take the position, London has made it clear that only the Imperial Family would be allowed to take up this spot especially here in the Commonwealth. However due to the circumstances of the last Governor General we have been granted more influence in choosing who in the Royal Family will take up the position.\n\nThe main favorite is the Duke of Kent, Prince George. The fourth son of Albert George and younger brother of Edward he is the most expected to take his brothers place. He was already considered to be a replacement for future Governor Generals in either Quebec or Victoria which means he is well prepared for it. The public is nonetheless very suspicious about him as he is still a close brother of Edward and fear he could turn out the same. He personally has commented that he wishes to make amends for his brothers actions for the Royal Family.\n\nThe Second and more suprising option would be the Arthur of Connaught, the son of Prince Arthur, Duke of Connaught and Strathearn, the current Governor General of Quebec. The Royal Son has become one of the most beloved Royals here in America. This is due to his actions in the Great War leading American troops himself and fighting amongst them in the trenches. Throughout the decades he has visited America several after this and has good connections here. Some are doubtful however if it is truely wise to have Father and Son as Governor Generals so close to each other and could kickstart future powerplays amongst the Royals.\n\nWho will represent the Empire here in the United Commonwealth?"
 Unicom.55.a:0 "Prince George to mend his brothers mistakes"
 Unicom.55.b:0 "Prince Arthur as a Blood-Brother for America"
 
 Unicom.56.t:0 "The Image of Edward"
-Unicom.56.d:0 "."
+Unicom.56.d:0 "Edward has gotten away out of the legal issue due to immunity but the problems as person and image remain. He has always been a highly controversial figure with his partying and tactless behaviour. Many feel that something has to change for the dignity of our country.\n\nWhile we could just leave this issue behind us and ignore it, all in the Cabinet believe that he should finally confront Edward in private. Either we chose the easy approach and try to convince Edward to improve his social standing by improving his behaviour and actually acting as an representative of the Empire or we can take the hard approach and demand that he should seize all his expenses."
 Unicom.56.a:0 "An apology to the American People"
 Unicom.56.b:0 "Demand he will stop with his parties"
 Unicom.56.c:0 "Lets bring this whole ordeal behind us"
 
 Unicom.57.t:0 "Edward Accepts the Demands"
-Unicom.57.d:0 "."
+Unicom.57.d:0 "Edward has accepted our demands. He will seek to curtail his execessive partying and try to better his image in Commonwealth in the future.\n\nWe will have to see if he can clean his bloodied reputation even a bit."
 Unicom.57.a:0 "Stay obscure now"
 
 Unicom.58.t:0 "Edward Rejects the Demands"
-Unicom.58.d:0 "."
-Unicom.58.a:0 "I hate the royals"
+Unicom.58.d:0 "Edward has rejected our demands. He states that he will not listen to the Anti-British and 'Tyrannical' Government in Philedelphia and continue to exercise his royal freedoms as he sees fit.\n\nHes making it really easy to dislike the British."
+Unicom.58.a:0 "I hate the Crown"
 
 
 Unicom_Elections.1.t:0 "The Dust Settles on the Crisis"
