Anglois Crisis is now actually *kinda* playable

--- a/localisation/english/PB_Opinion_Modifiers_l_english.yml
+++ b/localisation/english/PB_Opinion_Modifiers_l_english.yml
@@ -21,3 +21,5 @@
   MIF_Disgusting_Aliens:0 "Alien Invaders"
   edward_immunity:0 "Suspened Royal Immunity"
   royal_outreach:0 "Royal Intervention"
+  angloi_disaster:0 "Anglois Crisis Disaster"
+
