Fat Prussia Update

--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -8,13 +8,16 @@
   ##########################
 
   POLITICS_Philipp_Bouhler_DESC:0 "§YBorn:§!03/06/1896\n\n§YPhilipp Bouhler§! nicknamed the counsellor (§ODer Berater§!) has seen Prussia rise from the ashes as a rebirthed nation under Russian influence. A once simple farm boy turned solider during the great war he has seen the world at its quietest and loudest moments, serving in the Russian 3rd cavalry regiment. A regiment compromised of a Prussian majority that would soon turn against their forefathers in the Prussian war for independence during 1921. A war that proved successful in establishing a independent Prussia of sorts, heavily monitored by the Tsar's right hand.\n\nOriginally a fierce supporter of the democratic republic he soon saw through their antics and gained power through a bloody battle in Königsberg that lasted no longer than two days. Russia, meanwhile, looked with great interest towards Bouhler seeing him as a leader who aligned more towards their views and a possible proponent for a more Russian dominated Prussia. Secretly funding him and his Vaterland Front."
- 
+  PB_POLITICS_Friedrich_DESC:0 "§YBorn:§!15/04/1874\n\n§YFriedrich Heinrich Albrecht§! has ascended to the Prussian throne not by choice, but by the forceful persuasion of Prussia's ruling Junker aristocracy. His rule over the new kingdom whilst short has already gone far in ridding Bouhler's extremist influences, with the remnants  of the VaterlandFront still presenting themselves as the largest concern of both the Junkers and the King alike. Marked by careful political manoeuvring and the occasional back street deal Friedrich has restored order to a nation stained with the beliefs of self-destructive fools. Friedrich himself, a closet homosexual, has managed so far to toe the line in keeping the Junkers happy and restoring imperial, and perhaps democratic rule over the Prussian nation without inciting civil war amongst the kingdoms lingering extremist elements, of which there are still many."
+
   ##########################
   # ABILITIES
   ##########################
 
   PRS_Gas_Defense:0 "Gas Defense"
   PRS_Gas_Attack:0 "Gas Attack"
+  ABILITY_ANNIHILATION:0 "Annihilation Of The Self"
+  ABILITY_ANNIHILATION_DESC:0 "Not one inch of Prussia shall be ceded to our enemies, we will defend our great nation with everything we've got."
 
   ##########################
   # TECH TEAMS
@@ -103,7 +106,7 @@
   PRS_Gustav_Gun:0 "Gustav Gun"
   PRS_Secure_Black_Market_Oil_tt:0 "§RThis is a one time decision that can be used if Prussia's fuel reserves are low!§!"
   PRS_Open_New_Academies_tt:0 "\nAdds a new hidden national spirit:\n"
-  PRS_Impending_Royal_Coup_tt:0 "§gThe Junkers will take power through a bloody coup and restore the Prussian monarchy§!\n\nThis will load the Anarcho-Lib focus tree for Prussia, purging the Junkers by completing the focus '§HLiquidate The Princes§! and letting the Royal Coup timer tick down will result in some alternative options in the Anarcho-Lib tree."
+  PRS_Impending_Royal_Coup_tt:0 "§gThe Junkers will take power through a bloody coup and restore the Prussian monarchy§!\n\nThis will unlock the Anarcho-Lib focus tree for Prussia."
   prussia_focus_anarcho:0 "Prussian Anarcho-Lib Tree"
   PB_PRS_Secure_The_State_tt:0 "The Prussian Army will be stood down and will undergo a period of ideological and political reform.\n\n"
   PRS_De_Stablize_The_Rif_tt:0 "Should the stability of the Rif fall too low the nation may collapse allowing for Pacte intervention."
@@ -117,19 +120,24 @@
   PRS_Trade_Tooltip:0 "Every democractic nation will gain an additional §G+50§! trade relations with §YPrussia§!"
   PB_PRS_The_Last_One_Standing_tt:0 "\nWe must holdout against the Pacte for 250 days if we wish to prove ourselves as the legitimate German state.\n\nYou must complete all the below focuses while at war with the Pacte if you wish to inherit the remains of Habsburg Germany."
   PB_PRS_Germany_United_tt:0 "Once France is defeated you will gain control over all French occupied regions in Germany, same for Russia as well.\n\n"
-  PB_PRS_Alliance_With_The_Anglos_tt:0 "\n§gThe British AI will always approve of this request§!"
+  PB_PRS_Alliance_With_The_Anglos_tt:0 "\n§gThe British AI will always approve of this request§!\n\n§RShould you not join the alliance then the Pacte will declare war on you once their war against Germany starts.§!"
   PB_PRS_The_Men_In_Black_tt:0 "\n§gEnables the International mechanic, allowing for the infiltration of government networks across the globe."
   PB_PRS_Imperium_In_Imperio_tt:0 "Has concluded the International mechanic"
   PB_PRS_Establish_Council_Presence_NA_tt:0 "§GUnlocks§! Council operations in North America"
   PB_PRS_Promote_Europeanism_2_tt:0 "\nIf you have the §YYouth Camps§! national Spirit, you will gain an additional: §G+1.00%§! §HRecruitable Population§!\n\nThe Youth Programs National Spirit can be found in the following focus:\n\n\n\n\n£GFX_PRS_Youth_Program_Spirit\n\n\n \n\n\n"
   PB_PRS_A_Reich_Of_Our_Own_tt:0 "§GAdd§! the following hidden idea:\n"
-  PB_PRS_Prussia_On_The_World_Stage_tt:0 "Give §YThe Italian Social Republic§! market access."
+  PB_PRS_Prussia_On_The_World_Stage_tt:0 "Give §YThe Italian Social Republic§! market access."  PB_PRS_Promote_Europeanism_2_tt:0 "\nIf you have the §YYouth
   PB_PRS_Prussia_On_The_World_Stage_2_tt:0 "Give §YThe Holy Order of Spain§! market access."
   PB_PRS_The_Reich_In_A_New_Age_tt:0 "\nDemands will be sent for control over the following states to be transferred to Prussia assuming you don't control them: §YSchleswig-Holestein§!, §YHamburg§!, §YHannover§!, §YThuringen§!, §YOberschlesien§!, and §YKatowice§!. Should these demands be accepted you will immediately gain control of these states and core them."
   PB_PRS_Appeal_To_The_German_Diaspora_tt:0 "\nThe above on-map decisions grant §G+2§! building slots in their respective state and §G+2.5%§! stability when completed."
   PB_PRS_Demand_Authority_Over_Berlin_tt:0 "\nWhen the §HBerlin Administration§! is annexed, you will gain the following temporary debuff for §Y200§! days:\n\n"
   PB_PRS_The_Last_Of_The_Nobility_tt:0 "\nIt is recommended you §YPrioritize§! completing this focus branch."
   PB_PRS_David_And_Goliath_tt:0 "Unlocks a unqiue Conscription law:\n"
+  PB_PRS_Annihilation_Of_The_Self_tt:0 "Unlocks an improved version of the §HLast Stand§! ability"
+  NOR_Arms_Shipment:0 "Since [NOR.GetFlag] §YNorway§! is not at war with us and still exists you will gain the following:\n"
+  SWE_Arms_Shipment:0 "Since [SWE.GetFlag] §YSweden§! is not at war with us and still exists you will gain the following:\n"
+  DEN_Arms_Shipment:0 "Since [DEN.GetFlag] §YDenmark§! is not at war with us and still exists you will gain the following:\n"
+  PB_PRS_Total_Defense_tt:0 "For each fully controlled and cored state level §Y3§! and level §Y5§! forts will be constructed, the fort level depends on the VP score of the province.\n\n"
 
   ##########################
   # MECHANICS
