Russia focus GFX push

--- a/localisation/english/PB_countries_cosmetic_l_english.yml
+++ b/localisation/english/PB_countries_cosmetic_l_english.yml
@@ -4634,3 +4634,128 @@ ETR_Insurgency_an_ADJ:0 "Ugyhur"
   PGA_Revolt_ds_ADJ:0 "Galician"
   PGA_Revolt_cn_ADJ:0 "Galician"
   PGA_Revolt_an_ADJ:0 "Galician"
+
+  NOR_Romanov_ni:0 "Kingdom of Norway"
+  NOR_Romanov_ni_DEF:0 "The Kingdom of Norway"
+  NOR_Romanov_ds:0 "Kingdom of Norway"
+  NOR_Romanov_ds_DEF:0 "The Kingdom of Norway"
+  NOR_Romanov_rc:0 "Kingdom of Norway"
+  NOR_Romanov_rc_DEF:0 "The Kingdom of Norway"
+  NOR_Romanov_an:0 "Kingdom of Norway"
+  NOR_Romanov_an_DEF:0 "The Kingdom of Norway"
+  NOR_Romanov_cn:0 "Kingdom of Norway"
+  NOR_Romanov_cn_DEF:0 "The Kingdom of Norway"
+  NOR_Romanov_lb:0 "Kingdom of Norway"
+  NOR_Romanov_lb_DEF:0 "The Kingdom of Norway"
+  NOR_Romanov_ss:0 "Kingdom of Norway"
+  NOR_Romanov_ss_DEF:0 "The Kingdom of Norway"
+  NOR_Romanov_jc:0 "Kingdom of Norway"
+  NOR_Romanov_jc_DEF:0 "The Kingdom of Norway"
+  NOR_Romanov_ni_ADJ:0 "Norwegian"
+  NOR_Romanov_rc_ADJ:0 "Norwegian"
+  NOR_Romanov_lb_ADJ:0 "Norwegian"
+  NOR_Romanov_ss_ADJ:0 "Norwegian"
+  NOR_Romanov_jc_ADJ:0 "Norwegian"
+  NOR_Romanov_ds_ADJ:0 "Norwegian"
+  NOR_Romanov_cn_ADJ:0 "Norwegian"
+  NOR_Romanov_an_ADJ:0 "Norwegian"
+
+  DDR_East_Germany_ni:0 "Brandenburg-Germany"
+  DDR_East_Germany_ni_DEF:0 "The Kingdom of Brandenburg-Germany"
+  DDR_East_Germany_ds:0 "Brandenburg-Germany"
+  DDR_East_Germany_ds_DEF:0 "The Kingdom of Brandenburg-Germany"
+  DDR_East_Germany_rc:0 "Brandenburg-Germany"
+  DDR_East_Germany_rc_DEF:0 "The Kingdom of Brandenburg-Germany"
+  DDR_East_Germany_an:0 "Brandenburg-Germany"
+  DDR_East_Germany_an_DEF:0 "The Kingdom of Brandenburg-Germany"
+  DDR_East_Germany_cn:0 "Brandenburg-Germany"
+  DDR_East_Germany_cn_DEF:0 "The Kingdom of Brandenburg-Germany"
+  DDR_East_Germany_lb:0 "Brandenburg-Germany"
+  DDR_East_Germany_lb_DEF:0 "The Kingdom of Brandenburg-Germany"
+  DDR_East_Germany_ss:0 "Brandenburg-Germany"
+  DDR_East_Germany_ss_DEF:0 "The Kingdom of Brandenburg-Germany"
+  DDR_East_Germany_jc:0 "Brandenburg-Germany"
+  DDR_East_Germany_jc_DEF:0 "The Kingdom of Brandenburg-Germany"
+  DDR_East_Germany_ni_ADJ:0 "East German"
+  DDR_East_Germany_rc_ADJ:0 "East German"
+  DDR_East_Germany_lb_ADJ:0 "East German"
+  DDR_East_Germany_ss_ADJ:0 "East German"
+  DDR_East_Germany_jc_ADJ:0 "East German"
+  DDR_East_Germany_ds_ADJ:0 "East German"
+  DDR_East_Germany_cn_ADJ:0 "East German"
+  DDR_East_Germany_an_ADJ:0 "East German"
+
+  DDR_Militarstaat_ni:0 "West Prussia"
+  DDR_Militarstaat_ni_DEF:0 "West Prussian Republic"
+  DDR_Militarstaat_ds:0 "West Prussia"
+  DDR_Militarstaat_ds_DEF:0 "West Prussian Republic"
+  DDR_Militarstaat_rc:0 "West Prussia"
+  DDR_Militarstaat_rc_DEF:0 "West Prussian Republic"
+  DDR_Militarstaat_an:0 "West Prussia"
+  DDR_Militarstaat_an_DEF:0 "West Prussian Republic"
+  DDR_Militarstaat_cn:0 "West Prussia"
+  DDR_Militarstaat_cn_DEF:0 "West Prussian Republic"
+  DDR_Militarstaat_lb:0 "West Prussia"
+  DDR_Militarstaat_lb_DEF:0 "West Prussian Republic"
+  DDR_Militarstaat_ss:0 "West Prussia"
+  DDR_Militarstaat_ss_DEF:0 "West Prussian Republic"
+  DDR_Militarstaat_jc:0 "West Prussia"
+  DDR_Militarstaat_jc_DEF:0 "West Prussian Republic"
+  DDR_Militarstaat_ni_ADJ:0 "East German"
+  DDR_Militarstaat_rc_ADJ:0 "East German"
+  DDR_Militarstaat_lb_ADJ:0 "East German"
+  DDR_Militarstaat_ss_ADJ:0 "East German"
+  DDR_Militarstaat_jc_ADJ:0 "East German"
+  DDR_Militarstaat_ds_ADJ:0 "East German"
+  DDR_Militarstaat_cn_ADJ:0 "East German"
+  DDR_Militarstaat_an_ADJ:0 "East German"
+
+  DDR_Prussian_Integration_ni:0 "Westpreußen"
+  DDR_Prussian_Integration_ni_DEF:0 "Transitional Authority of West-Prussia"
+  DDR_Prussian_Integration_ds:0 "Westpreußen"
+  DDR_Prussian_Integration_ds_DEF:0 "Transitional Authority of West-Prussia"
+  DDR_Prussian_Integration_rc:0 "Westpreußen"
+  DDR_Prussian_Integration_rc_DEF:0 "Transitional Authority of West-Prussia"
+  DDR_Prussian_Integration_an:0 "Westpreußen"
+  DDR_Prussian_Integration_an_DEF:0 "Transitional Authority of West-Prussia"
+  DDR_Prussian_Integration_cn:0 "Westpreußen"
+  DDR_Prussian_Integration_cn_DEF:0 "Transitional Authority of West-Prussia"
+  DDR_Prussian_Integration_lb:0 "Westpreußen"
+  DDR_Prussian_Integration_lb_DEF:0 "Transitional Authority of West-Prussia"
+  DDR_Prussian_Integration_ss:0 "Westpreußen"
+  DDR_Prussian_Integration_ss_DEF:0 "Transitional Authority of West-Prussia"
+  DDR_Prussian_Integration_jc:0 "Westpreußen"
+  DDR_Prussian_Integration_jc_DEF:0 "Transitional Authority of West-Prussia"
+  DDR_Prussian_Integration_ni_ADJ:0 "East German"
+  DDR_Prussian_Integration_rc_ADJ:0 "East German"
+  DDR_Prussian_Integration_lb_ADJ:0 "East German"
+  DDR_Prussian_Integration_ss_ADJ:0 "East German"
+  DDR_Prussian_Integration_jc_ADJ:0 "East German"
+  DDR_Prussian_Integration_ds_ADJ:0 "East German"
+  DDR_Prussian_Integration_cn_ADJ:0 "East German"
+  DDR_Prussian_Integration_an_ADJ:0 "East German"
+
+  RET_East_Africa_ni:0 "Russian East Africa"
+  RET_East_Africa_ni_DEF:0 "Russian East Africa"
+  RET_East_Africa_ds:0 "Russian East Africa"
+  RET_East_Africa_ds_DEF:0 "Russian East Africa"
+  RET_East_Africa_rc:0 "Russian East Africa"
+  RET_East_Africa_rc_DEF:0 "Russian East Africa"
+  RET_East_Africa_an:0 "Russian East Africa"
+  RET_East_Africa_an_DEF:0 "Russian East Africa"
+  RET_East_Africa_cn:0 "Russian East Africa"
+  RET_East_Africa_cn_DEF:0 "Russian East Africa"
+  RET_East_Africa_lb:0 "Russian East Africa"
+  RET_East_Africa_lb_DEF:0 "Russian East Africa"
+  RET_East_Africa_ss:0 "Russian East Africa"
+  RET_East_Africa_ss_DEF:0 "Russian East Africa"
+  RET_East_Africa_jc:0 "Russian East Africa"
+  RET_East_Africa_jc_DEF:0 "Russian East Africa"
+  RET_East_Africa_ni_ADJ:0 "Russo-African"
+  RET_East_Africa_rc_ADJ:0 "Russo-African"
+  RET_East_Africa_lb_ADJ:0 "Russo-African"
+  RET_East_Africa_ss_ADJ:0 "Russo-African"
+  RET_East_Africa_jc_ADJ:0 "Russo-African"
+  RET_East_Africa_ds_ADJ:0 "Russo-African"
+  RET_East_Africa_cn_ADJ:0 "Russo-African"
+  RET_East_Africa_an_ADJ:0 "Russo-African"
