--- a/localisation/english/PB_Imperial_Civil_War_l_english.yml
+++ b/localisation/english/PB_Imperial_Civil_War_l_english.yml
@@ -352,6 +352,26 @@
   PM_Propose_Quebec_Bailout_desc:0 "Quebec is suffering from an economic crisis, one that it will take years for them to recover fully from. For a faster recovery they need foreign help, especially from us - their closest economic partner next to Britian. We can easily sustain an economic health package for our dear neighbour but not without any concession. They have to make a lot more concession regarding the Angloi Situation."
   PM_Free_Military_Package:0 "Offer Free Equipment"
 
+  PM_Quebec_Overlordship:0 "Enforce Control in Quebec"
+  PM_Quebec_Overlordship_desc:0 "With political chaos breaking out in the rest Quebec and the breakdown of order and stability seems near. The British Government will authorize the armed forces to restore order and make sure that the Quebecian Government will remain on the side of Britian for a long time. This oppurtunity grants us to secure Quebec from any kind of American meddling."
+  PM_ENG_Guarentee_Superieur:0 "Guarentee Quebecian Superieur"
+  PM_ENG_Guarentee_Huron:0 "Guarentee Quebecian Huron"
+  PM_ENG_Meddle_AME_Politics:0 "Meddle in Philadelphia"
+  PM_ENG_Quebec_Rights_Act:0 "Quebecian Rights Act"
+
+
+  ENG_Quebec_Direct_Puppet_tt:0 "§GThe Commonewealth of Quebec will become a direct puppet of Britian§!"
+
+  ENG_Guarentee_Super_tt:0 "[ENG.GetFlag] §YBritian Guarentees§! [QUE.GetFlag]Superieur"
+  ENG_Guarentee_Huron_tt:0 "[ENG.GetFlag] §YBritian Guarentees§! [QUE.GetFlag]Huron"
+
+  ENG_Guarentee_Super_tt_check:0 "§YDoes Not Have:§! [ENG.GetFlag] §YBritian Guarentees§! [QUE.GetFlag]Superieur"
+  ENG_Guarentee_Huron_tt_check:0 "§YDoes Not Have:§! [ENG.GetFlag] §YBritian Guarentees§! [QUE.GetFlag]Huron"
+
+  AME_Cost_of_Quebec_1_tt:0 "£decision_icon_small §YDecision Cost§! regarding Quebecian Affairs in the Balance of Power will be §Rincreased§!"
+  ENG_Cost_of_Quebec_1_tt:0 "£decision_icon_small §YDecision Cost§! regarding Quebecian Affairs in the Balance of Power will be §Greduced§!"
+
+
   Avoiding_Decisions_Demand_Spam:0 "A State Demand has been made"
 
   Quebec_Bailout_tt:0 "§GOur chances of success in negotiations will increase.§!\n§YIf Quebec accepts the bailout we will pay 10% Consumer Goods for 150 Days§!"
@@ -489,9 +509,24 @@
   Anglois_Crisis.23.d:0 "This might be the biggest geopolitical victory of the United Commonwealth in its history. All Anglois Provinces around the Great Lakes will be transferred under American Ownership.\n\nBritian has come to realize that nothing can stand in the way of the American Will and have accepted all our demands. From now our border in the north lies on the natural lines of Toronto, the channel of Sault Saine-Maire and Duluth. We have incorporated a region of almost 20 Million people and some of the biggest industrial centers in the world.\n\nThere are some concerns about remaining Quebecois in our provinces especially in Superieur but we are ensure that they will soon accept this new reality.\n\nA lot of nations now look at Commonwealth in new eyes. A Great Power on the Rise. A Great Power which can compete with Britian itself maybe?"
   Anglois_Crisis.23.a:0 "THE AMERICAN AGE HAS TRUELY BEGUN"
 
+  Anglois_Crisis.24.t:0 "QUEBEC INTEGRITY DEFENDED"
+  Anglois_Crisis.24.d:0 ""
+  Anglois_Crisis.24.a:0 "London is and will always be the Master"
+
+  Anglois_Crisis.25.t:0 "STATUS QUO REMAINS"
+  Anglois_Crisis.25.d:0 ""
+  Anglois_Crisis.25.a:0 "Conflict will doom us all"
+
+  Anglois_Crisis.26.t:0 "AMERICA WINS THE ANGLOIS CRISIS"
+  Anglois_Crisis.26.d:0 ""
+  Anglois_Crisis.26.a:0 "Was this the right call?"
 
 
 
+
+  ImpManagement_QUE_60_tt:0 "[QUE.GetFlag]Quebecian Alignment is less then §r60%§!"
+
+  ImpManagement_QUE_30_tt:0 "[QUE.GetFlag]Quebecian Alignment is less then §r30%§!"
 
 
   Anglois_Crisis.33.t:0 "United Commenwealth offers bailout"
