--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -42,11 +42,13 @@ AME_Caribean_Power_Game:0 "§bWith great dominance and a rivaling fleet in the I
 
 AME_Caribean_Power_Chance:0 "§YThe Chance of Success depends on your amount of Imperial Dominance, the Size of your Fleet and Imperial Tension.§!"
 
-AME_Dominion_Eco_Power_Take_Over_tt:0 "£GFX_decision_icon_small §BUnlocks decisions to take over the Economic Influence in the British Dominions and Commonwealths to bind them closer to us.§!"
+AME_Dominion_Eco_Power_Take_Over_tt:0 "£GFX_decision_icon_small §BUnlocks decisions to take over the Total Influence in the British Dominions and Commonwealths to bind them closer to us.§!"
 
 AME_Green_Heart_Donations:0 "§GEvery Dominion and Commonwealth will gain one free civilian factory and Industrial research bonus.§!"
 
 AME_Cost_Reduction_Confrontation_Special:0 "£decision_icon_small §YDecision Cost§! of All Aligned Decisions in the Balance of Power will be §Greduced§!"
+
+AME_Cost_Reduction_Confrontation_Special:0 "£decision_icon_small §YDecision Cost§! of All Aligned Decisions in the Balance of Power will be §Gincreased for Britian§!"
 
 AME_Midwest_Industry_Controls_Info:0 "§YAnglois States owned by the United Commonwealth will be included into the project§!"
 
