Statement: AI Modding SUCKS

--- a/localisation/english/unit_l_english.yml
+++ b/localisation/english/unit_l_english.yml
@@ -361,6 +361,7 @@
  flamethrowers_desc:0 "For when you want to set those people over there on fire, but you're just not close enough to get the job done."
  shockjockeys:0 "Shockjockies"
  shockjockeys_desc:0 "Shock Troopers, intended for anti-armor use"
+ group_automat_title:0 "Automat Battalions"
  gw_basic_automat:0 "Duopod Automats"
  gw_basic_automat_desc:0 "Light Model Automatic Mech"
  tripod_automat:0 "Tripod Automats"
